engine-net-2/examples/Errors/IndexTwoUpperBoundsCompiled.grg
#include "Rules.grg"

sequence s1
{
	for{v:N in {ascending(idx>7,idx>42)}; true}
}
